Update default model to google/gemini-2.5-flash-lite
- Changed default OpenRouter model from anthropic/claude-3-haiku to google/gemini-2.5-flash-lite
- Updated model configuration comments and documentation
- Added comprehensive documentation (API docs, production guides, security audit)
- Added ESLint configuration and test setup
- Updated favicons and UI components
- Added middleware and utility modules

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,12 @@
     <meta property="og:title" content="Sora Prompt Builder - AI-Powered Video Prompt Enhancement" />
     <meta property="og:description" content="Create perfect Sora video prompts with AI-powered enhancements. Add cinematic camera angles, lighting, styles, and motion with intelligent prompt refinement." />
     <meta property="og:type" content="website" />
+    <!-- Favicon links for multiple sizes and formats -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <!-- Fallback for older browsers -->
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
